vpc.tf
resource "aws_vpc" "laci_terraform_vpc" {
  cidr_block = "10.0.0.0/16"

  tags = {
    "Name" = "laci_terraform_vpc-1"
  }
}
